# Mayuu

./: README.md  main.py  pyproject.toml
cogs/: fun.py  games.py  help.py  speaker.py  utility.py
libs/: database.py  functions.py  keep_alive.py
