[tool.poetry]
name = "Mayuu"
version = "0.1.0"
description = "Discord bot"
authors = ["realy0_"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
replit = "^2.0.0"
insprio = "^0.0.1"
lib = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
